tests/error/not_type.src
.IPPcode18
defvar GF@a
move GF@a int@5
not GF@a GF@a 